@@ -112,8 +112,11 @@ Trunk -  Unreleased
 
     HIVE-1119. Serialize all tasks (Zheng Shao via namit)
 
-    HIVE-1119. Change default size of average size to 16M
+    HIVE-1118. Change default size of average size to 16M
     (Zheng Shao via namit)
+
+    HIVE-1121. Support CombineHiveInputFormat for hadoop 0.19
+    (Roberto Congiu via namit)
 
 Release 0.5.0 -  Unreleased
 
